add migrations, update date
