# docs/swagger.json
@@ -21,7 +21,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/github_com_oatsmoke_20250905_internal_model.Subscription"
+                                "$ref": "#/definitions/github_com_oatsmoke_20250905_internal_model.ExternalData"
                             }
                         }
                     },
@@ -49,12 +49,12 @@
                 "summary": "Create subscription",
                 "parameters": [
                     {
-                        "description": "Subscription",
+                        "description": "external data",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_oatsmoke_20250905_internal_model.Subscription"
+                            "$ref": "#/definitions/github_com_oatsmoke_20250905_internal_model.ExternalData"
                         }
                     }
                 ],
@@ -162,7 +162,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID subscription",
+                        "description": "id subscription",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -172,7 +172,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github_com_oatsmoke_20250905_internal_model.Subscription"
+                            "$ref": "#/definitions/github_com_oatsmoke_20250905_internal_model.ExternalData"
                         }
                     },
                     "400": {
@@ -206,18 +206,18 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID subscription",
+                        "description": "id subscription",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "Subscription",
+                        "description": "external data",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_oatsmoke_20250905_internal_model.Subscription"
+                            "$ref": "#/definitions/github_com_oatsmoke_20250905_internal_model.ExternalData"
                         }
                     }
                 ],
@@ -256,7 +256,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID subscription",
+                        "description": "id subscription",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -289,14 +289,15 @@
         }
     },
     "definitions": {
-        "github_com_oatsmoke_20250905_internal_model.Subscription": {
+        "github_com_oatsmoke_20250905_internal_model.ExternalData": {
             "type": "object",
             "properties": {
                 "end_date": {
                     "type": "string"
                 },
                 "id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "format": "int64"
                 },
                 "price": {
                     "type": "integer"
